Goes darker in dark mode and fixes primary nav link size in super small screens.

--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -29,8 +29,8 @@
 .navigation__primary li,
 .navigation__social li {
 	display: inline;
-	font-size: $font-size-medium + 2;
-	line-height: $line-height + .3;
+	font-size: $font-size-medium;
+	line-height: $line-height;
 
 	@media #{$lake} {
 		display: block;
