--- a/src/scss/variables/_custom-properties.scss
+++ b/src/scss/variables/_custom-properties.scss
@@ -37,12 +37,12 @@
 		--primary-color: var(--honey);
 		--secondary-color: var(--brown-darker);
 		--text-color: var(--white);
-		--background: var(--brown-dark);
+		--background: var(--brown-darker);
 		--site-title: var(--gray);
 		--border-color: var(--honey);
 		--link-current: var(--white);
 		--link-hover: var(--yellow);
-		--code-blocks: var(--brown-dark);
+		--code-blocks: var(--brown-light);
 		--table-background: var(--brown-lighter);
 	}
 }
